# PYTHON_PROJECT_SUMMER

./: Makefile  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: check-code.yml
app/: main.py  settings.py
docs/: index.md  list_of_content.md
templates/: base.html
