[tool.poetry]
name = "python-project-summer"
version = "0.1.0"
description = ""
authors = ["timur <timurka.t.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
mkdocs = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
